[tool.poetry]
name = "timeless-loop"
version = "0.1.0"
description = ""
authors = ["Pedro Batista <pedrovhb@gmail.com>"]
readme = "README.md"
packages = [{include = "timeless_loop"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
